delete sidedish files.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -145,8 +145,8 @@ h2.white {
 
 
 h3 {
-	font-family: 'Oswald', sans-serif;
-	font-size: 22px;
+	font-family: 'BebasNeueRegular', sans-serif;
+	font-size: 34px;
 }
 
 h3.white {
@@ -154,7 +154,7 @@ h3.white {
 }
 
 h4 {
-	font-family: 'Oswald', sans-serif;
+	font-family: 'BebasNeueRegular', sans-serif;
 	font-size: 22px;
 }
 
