move index.html file to view directory to maintain member profiles.

--- a/app/views/main/index.html
+++ b/app/views/main/index.html
@@ -78,7 +78,7 @@
 				<ul id="nav" class="links">
           <li class="current"><a href="#about">About</a></li>
 					<li><a href="#founders">Founders</a></li>
-					<li><a href="#services">Members</a></li>
+					<li><a href="#members">Members</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
 					<li><a href="#services">Sponsor</a></li>
 					<li><a href="#contact">Contact</a></li>
@@ -165,37 +165,111 @@
 		<div class="container">
 			<!-- Start Profile -->
 			<div class="eight columns">
-			    <div class="img-wrp">
-	    			<img alt="" class="scaleimg" src="images/team/profile1.jpg" />
-	    			<div class="overlay-wrp">
-              <div class="overlay"></div>
-              <ul class="social-icons overlay-content">
-                <li><a href="#"><i class="icon-facebook"></i></a></li>
-                <li><a href="#"><i class="icon-twitter"></i></a></li>
-              </ul>
-	    			</div>
-			    </div>
-				<h3>이두희</h3>
-				<p class="description">Lorem ipsum dolor sit amet, consectetur <a href="#homepage">adipiscing elit</a>. Maecenas ac augue at erat hendrerit dictum. Praesent porta, purus eget sagittis imperdiet, nulla mi ullamcorper metus, id hendrerit metus diam vitae est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+
+        <div class="info-block" style="padding:13px 4px 4px 14px">
+            <h4 style="margin-bottom:7px;">이두희</h4>
+        </div>
+
+        <div class="img-wrp">
+          <img alt="" class="scaleimg" src="images/team/master-duhee.png" />
+          <div class="overlay-wrp">
+            <div class="overlay"></div>
+            <ul class="social-icons overlay-content">
+              <li><a href="http://facebook.com/iam.duhee"><i class="icon-facebook"></i></a></li>
+              <li><a href="http://twitter.com/iamdoo2"><i class="icon-twitter"></i></a></li>
+            </ul>
+          </div>
+        </div>
+				<div class="tabs">
+					<ul>
+						<li id="tab1" class="current">소개</li>
+						<li id="tab2">만든것들</li>
+						<li id="tab3">써낸것들</li>
+					</ul>
+					
+					<div class="tab-content-wrp">
+						<div id="tab1-content" class="tab-content active">
+              <p>- <u>네오위즈게임즈</u>&nbsp;Neoply 센터 기술팀 일개 직원, 2014</p>
+              <p>- <u>멋쟁이사자처럼</u>&nbsp;설립, 2013</p>
+              <p>- <u>울트라캡숑</u>&nbsp;창업 및 대장, 2011 - 2012 (카카오에 매각됨)</p>
+              <p>- <u>서울대학교 iOS 어플</u>&nbsp;개발, 2010 (학교가 가져감)</p>
+              <p>- 서울대학교 강의평가&nbsp;<u>snuev.com</u>&nbsp;기획/개발/운영 총괄, 2008</p>
+              <p>- 서울대학교 웹개발동아리&nbsp;<u>와플스튜디오</u>&nbsp;설립 및 대장, 2007</p>
+              <p>- 서울대학교&nbsp;<u>전산원 관리자 권한을 어쩌다 획득</u>&nbsp;후, 교수님께 혼남, 2006</p>
+              <p>- <u>egloos 관리자 권한 획득</u>&nbsp;후, egloos 개발자분들께 칭찬받음, 2006</p>
+              <p>- 2학년 학점 1.97 기록, 2005</p>
+						</div>
+						
+						<div id="tab2-content" class="tab-content">
+              <p>- 서울대학교 총학생회 온라인 투표&nbsp;<u>보트피플</u>&nbsp;개발, 2013</p>
+              <p>- 명지대, 숙대 강의평가 등&nbsp;<u>10여개 대학교 강의평가</u>&nbsp;개발, 2012</p>
+              <p>- <u>klassmate</u>,&nbsp;<u>미팅학개론</u>,&nbsp;<u>너말고니친구</u>&nbsp;기획/개발, 2012</p>
+              <p>- <u>드림컨설턴트</u>&nbsp;개발, 2010</p>
+              <p>- 스타트업&nbsp;<u>Frograms</u>,&nbsp;<u>스윗토리</u>&nbsp;개발팀, 2010</p>
+              <p>- 서울대학교 강의평가&nbsp;<u>snuev.com</u>&nbsp;기획/개발총괄/운영, 2008</p>
+              <p>- 서울대학교 성희롱/성폭력 상담소&nbsp;<u>성희롱 예방교육</u> 개발, 2008</p>
+              <p>- 게임제작 도구, <u>조물조물</u> 기획/개발, 서울대 컴퓨터공학전 1위, 2006</p>
+              <p>- <u>Zigbee USN Network Monitoring</u> 기획/개발, 산업자원부장관상 2006</p>
+              <p>- 3D 리듬게임 <u>Super Hand</u> 기획/개발, 서울대 컴퓨터공학전 2위, 2004</p>
+						</div>
+						
+						<div id="tab2-content" class="tab-content" style="line-height:140%;">
+              <p style="font-weight:bold;text-decoration:underline;font-size:110%;">번역서</p>
+              <p>- 이두희, 이범기, 전재호,&nbsp;<u>카산드라 따라잡기</u>, 에이콘 출판사, 2013</p>
+              <p>- 이성원, 윤주식, 이두희,&nbsp;<u>아이폰 기능을 무한 확장할 수 있는 아이폰 액세서리 디바이스 개발</u>, 에이콘출판사, 2011</p>
+              <p style="font-weight:bold;text-decoration:underline;font-size:110%;">논문</p>
+              <p>- Duhee Lee, Jong-Chan Kim, Chang-Gun Lee, Kanghee Kim, <u>mRT-PLRU: A General Framework for Real-Time Multi-Task Executions on NAND Flash Memory</u>,in IEEE Transactions on Computers, Vol. 62, No. 4, Apr. 2013. <span style="color:#ff8585;">(SCI)</span></p>
+              <p>- Jong-Chan Kim, Duhee Lee, Chang-Gun Lee, Kanghee Kim, <u>RT-PLRU: A New Paging Scheme for Real-Time Execution of Program Codes on NAND Flash Memory for Portable Media Players</u>, in IEEE Transactions on Computers, Vol. 60, Issue 8, pp. 1126-1141, Aug. 2011. <span style="color:#ff8585;">(SCI)</span></p>
+              <p>- Duhee Lee, Chang-Gun Lee, Kanghee Kim, <u>A Generic Framework for Real-Time Program Executions on NAND Flash Memory in Multi-Tasking Embedded Systems</u>, in 30th IEEE Real-Time Systems Symposium (RTSS), Washington, D.C., USA, Dec. 2009. <span style="color:#ff8585;">(SCI)</span></p>
+              <p>- Duhee Lee, Chang-Gun Lee, Kanghee Kim, <u>Real-time code execution on NAND flash memory supporting wide-spectrum of input data for multiple tasks</u>, in International Workshop on Software Support for Portable Storage (IWSSPS) in conjunction with ESWEEK, France, Oct. 2009.</p>
+              <p>- Jong-chan Kim, Duhee Lee, Chang-Gun Lee, Kanghee Kim, Eun Young Ha, <u>Real-Time Program Execution on NAND Flash Memory for Portable Media Players</u>, in 29th IEEE Real-Time Systems Symposium (RTSS), Barcelona, Spain , Nov. 2008. <span style="color:#ff8585;">(SCI)</span></p>
+              <p>- Duhee Lee, Jong-Chan Kim, Chang-Gun Lee, <u>Practical Paging Strategy for Real-Time Code Execution of Media Player on NAND Flash Memory</u>, in The International Workshop on Software Support for Portable Storage (IWSSPS) in conjunction with ESWEEK, Atlanta, USA, 2008.</p>
+              <p style="font-weight:bold;text-decoration:underline;font-size:110%;">특허</p>
+              <p>- Chang-Gun Lee, Oh-Chul Kwon, Kang-Wook Kim, Kyoung-Soo We, Jae-Hwa Han, Myung-Gon Park, Duhee Lee, Jong-Chan Kim, Jusung Kim, and Sangmin Jeong, <u>문자 입력 방법 및 장치, No. 10-1296145</u>, Aug. 2013</p>
+              <p>- Chang-Gun Lee, Oh-Chul Kwon, Kang-Wook Kim, Kyoung-Soo We, Jae-Hwa Han, Myung-Gon Park, Duhee Lee, and Jong-Chan Kim, <u>해상도 전환을 위한 스마트폰의 플랫폼, No. 10-1209144</u>, Nov. 2012</p>
+              <p>- Chang-Gun Lee, Oh-Chul Kwon, Kang-Wook Kim, Kyoung-Soo We, Jae-Hwa Han, Myung-Gon Park, Duhee Lee, and Jong-Chan Kim, <u>소형전자장치에서의 문자 입력 장치 및 방법, No. 10-1141728</u>, Apr. 2012</p>
+              <p>- Oh-Chul Kwon, Kang-Wook Kim, Kyoung-Soo We, Duhee Lee, Jong-Chan Kim, Jusung Kim, Jae-Hwa Han, Sangmin Jeong, and Chang-Gun Lee, <u>다양한 입력장치를 수용할 수 있는 모바일 디바이스 및 그 방법, No. 10-2011-0128493</u>, Dec. 2011</p>
+              <p>- Oh-Chul Kwon, Kang-Wook Kim, Kyoung-Soo We, Duhee Lee, Jong-Chan Kim, Jusung Kim, Jae-Hwa Han, Sangmin Jeong, and Chang-Gun Lee, <u>모바일 디바이스에서 외부 디스플레이 장치의 해상도에 맞는 화면을 제공하는 방법, No. 10-2011-0128494</u>, Dec. 2011</p>
+              <p>- Chang-Gun Lee, Oh-Chul Kwon, Kang-Wook Kim, Kyoung-Soo We, Jae-Hwa Han, Myung-Gon Park, Duhee Lee, Jong-Chan Kim, Jusung Kim, and Sangmin Jeong, <u>문자 입력 방법 및 장치, No. PCT/KR2011/008182</u>, Oct. 2011</p>
+              <p>- Chang-Gun Lee, Jong-Chan Kim, and Duhee Lee, <u>메모리 구조에 따른 메모리 관리 장치, No. 10-0987332</u>, Oct. 2010</p>
+						</div>
+					</div>
+				</div>
 			</div>
 			<!-- End Profile -->	
 			
 			<!-- Start Profile -->			
 			<div class="eight columns">
-			    <div class="img-wrp">
-	    			<img alt="" class="scaleimg" src="images/team/profile2.jpg" />
-	    			<div class="overlay-wrp">
-	        			<div class="overlay"></div>
-	        			<ul class="social-icons overlay-content">
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-	        			</ul>
-	    			</div>
-			    </div>
-				<h3>Zajec Forester</h3>
-				<p class="job-position">Creative Director</p> 
-				<p class="description">Phasellus a nisi urna, facilisis facilisis diam. Vivamus enim ligula, sollicitudin nec porttitor nec, commodo vel justo. Nunc in mattis ipsum. Mauris accumsan pretium diam, sit amet iaculis purus ullamcorper ac. Donec pulvinar metus a ipsum varius suscipit. Mauris ut nisi at tortor molestie rhoncus ultrices quis nisi.</p>                                                 
+        <div class="info-block" style="padding:13px 4px 4px 14px">
+          <h4 style="margin-bottom:7px;">최용철</h4>
+        </div>
+        <div class="img-wrp">
+          <img alt="" class="scaleimg" src="images/team/master-charles.png" />
+          <div class="overlay-wrp">
+              <div class="overlay"></div>
+              <ul class="social-icons overlay-content">
+            <li><a href="http://facebook.com/yongchol.choi"><i class="icon-facebook"></i></a></li>
+              </ul>
+          </div>
+        </div>
+				<div class="tabs">
+					<ul>
+						<li id="tab1" class="current">소개</li>
+					</ul>
+					<div class="tab-content-wrp">
+						<div id="tab1-content" class="tab-content active">
+              <p>- <u>(주)라이크라이언</u> 창업 및 대표, 2013</p>
+              <p>- <u>멋쟁이사자처럼</u> 설립, 2013</p>
+              <p>- 안드로이드 무선 조종 미니카 <u>카두이노</u> , 서울대 창의공학설계 2위, 2012</p>
+              <p>- 애완 동물 돌보는 원격제어 로봇 <u>펫시터</u>,  창원창업경진대회 2위, 2012</p>
+              <p>- 2011년 <u>MIT-Global Startup Workshop in Seoul 조직위원회</u>, 2011</p>
+              <p>- 서울대학교 학생벤처네트워크 <u>snusv 18대 회장</u>, 2011</p>
+              <p>- <u>비올레타, 사랑해!</u> 창업, 2011</p>
+              <p>- <u>플레이코업</u> 창업, 2011</p>
+              <p>- 제11회, 제12회 <u>대한민국 대학생벤처창업 경진대회 조직위원회</u>, 2010</p>
+						</div>
+					</div>
+        </div>
 			</div>
 			<!-- End Profile -->	
 		</div>
@@ -211,22 +285,19 @@
 	        <div class="eleven columns">
 	            <div class="vertical-text">
 	            	<p class="twitter-author"><a href="http://twitter.com/envato" target="_blank">@envato</a></p>
-	                <div id="lasttweet"></div>
-	                <img alt="" src="images/social-icons/follow.png" style="margin-top: 36px;" />
+                <div id="lasttweet"></div>
+                <img alt="" src="images/social-icons/follow.png" style="margin-top: 36px;" />
 	            </div>
 	        </div>
 	    </div>
 	</div>
 	<!-- End Second Parallax Background (Twitter) -->
 	
-	
 	<!-- Start Services Page -->
-	<div id="services" class="page">
-	
+	<div id="members" class="page">
 		<div class="container">
-		
 			<div class="sixteen columns">
-				<h1>Our Services</h1>
+				<h1>Members</h1>
 				<div class="one-text">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac augue at erat hendrerit dictum. Praesent porta, purus eget sagittis imperdiet, nulla mi ullamcorper metus, id hendrerit metus diam vitae est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
 				</div>
@@ -270,17 +341,6 @@
 					<hr>
 			</div>
 			
-			<!-- Start Filters -->
-      <ul class="option-set" data-option-key="filter">
-        <li><i class="icon-reorder"></i></li>
-        <li><a class="selected" href="#filter" data-option-value="*"><span></span>All projects</a></li>
-        <li><a href="#filter" data-option-value=".photography"><span></span>Photography</a></li>
-        <li><a href="#filter" data-option-value=".video"><span></span>Video</a></li>
-        <li><a href="#filter" data-option-value=".design"><span></span>Design</a></li>
-      </ul>
-			<!-- End Filters -->
-			
-			<div id="portfolio_items" class="isotope">
 			
 			<!-- Start Project -->
 			<div class="four columns item isotope-item photography">
@@ -480,9 +540,6 @@
 				<p class="project-description">Cosmos Market Company</p>
 			</div>	
 			<!-- End Project -->
-			
-			</div>
-			
 		</div> 	
 		
 	</div>
@@ -545,7 +602,7 @@
 		</div>
 	
 		<div class="copyright">
-			<p>© 2012 Kutcher studio. <a href="http://themes.tvda.eu/">Kutcher Template</a> by <a href="http://themes.tvda.eu/">TVDA</a>.</p>
+			<p>&copy;2014 likelion.</p>
 		</div>		
 	
 	</div>
