--- a/public/css/style.css
+++ b/public/css/style.css
@@ -455,7 +455,7 @@ Parallax
 	}
 	
 	.bg3 {
-		background: url(../images/parallax/teaser3.jpg) 50% 50% fixed repeat-y;
+		background: url(../images/parallax/google-flat.png) 50% 50% fixed repeat-y;
 		width: 100%;
 		height: 100%;
 		margin: 0 auto;
@@ -661,18 +661,20 @@ Content
 
 	
 	.project-title {
-		font-family: 'BebasNeueRegular', sans-serif;
-		font-size: 12px;
+    text-align:center;
+	  font-family: 'Nanum Barun Gothic', sans-serif;
+		font-size: 15px;
 		text-transform: uppercase;
 		margin-top: 7px;
 	}
 	
 	.project-description {
+    text-align:center;
+	  font-family: 'Nanum Barun Gothic', sans-serif;
 		color: #868991;
-		font-size: 10px;
+		font-size: 12px;
 		text-transform: uppercase;
-		font-weight: 600;
-		margin: 0 0 20px 0;
+		margin: 5px 0 20px 0;
 	}
 	
 	.columns .overlay-content.loupe {
