--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,10 +1,19 @@
 <!DOCTYPE HTML>
 <head>
 	<meta charset="UTF-8">
-	<title>likelion</title>
+	<title>Likelion</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta property="og:title" content="멋쟁이 사자처럼" />
+  <meta property="og:site_name" content="내 회사 한번 가져봐야 하지 않겠나?" />
+  <meta property="og:image" content="http://likelion.net//assets/thumb-dc6bbcc6030ba2958bbc9428c8909dbb.jpg" />
+  <meta property="og:url" content="http://likelion.net/" />
+  <meta property="og:type" content="website" />
+  <meta property="fb:app_id" content="149190165235116" />
+  <meta property="og:description" content="나만의 웹/앱 서비스를 갖고 싶은 비전공자 대학생에게 프로그래밍 실력을 갖추게 할 슈퍼 하드 집중 포커스 트레이닝이 시작된다."/>
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="/images/favicon.ico" />
 	
 	<!-- CSS Responsive Framework Skeleton -->
 	<link rel="stylesheet" href="css/skeleton.css">
@@ -31,6 +40,18 @@
 	<!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
+
+  <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-37820043-1']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  </script>
 </head>
 
 <body>
@@ -48,6 +69,19 @@
 			<div class="slider-text">
 				<div class="sixteen columns">
 					<div class="line"></div>
+    <!--FACEBOOK-->
+    <div id="facebook_division" style="margin-bottom:5px;margin-left:5px;">
+      <div class="fb-like" data-href="http://likelion.net" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
+    </div>
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=149190165235116";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+    <!--FACEBOOK-->
 				</div>
 				
 				<div class="twelve columns">
@@ -60,6 +94,7 @@
 					<a id="nextslide" class="load-item"><i class="icon-chevron-right"></i></a>
 				</div>
         -->
+
 			</div>
 			
 		</div>
@@ -147,8 +182,7 @@
 		<div class="pattern"></div>
 		<div class="container">
 			<div class="vertical-text">
-				<p class="prlx-quote">If everyone demanded peace instead of another television set, then there'd be peace.</p>
-				<div class="prlx-author">John Lennon</div>
+				<p class="prlx-quote">Change the world with coding.</p>
 			</div>
 		</div>
 	</div>
@@ -284,13 +318,6 @@
 	    <div class="bg2"></div>
 	    <div class="pattern"></div>
 	    <div class="container">
-        <div class="eleven columns">
-          <div class="vertical-text">
-            <p class="twitter-author"><a href="http://twitter.com/envato" target="_blank">@envato</a></p>
-            <div id="lasttweet"></div>
-            <img alt="" src="images/social-icons/follow.png" style="margin-top: 36px;" />
-          </div>
-        </div>
 	    </div>
 	</div>
 	<!-- End Second Parallax Background (Twitter) -->
@@ -305,19 +332,34 @@
           <hr>
 				</div>
 			</div>  
+    <div>
 			<!-- Start Project -->
       <% [@sejong, @khu, @kaist, @snu_yonsei, @ajou, @gachon, @hanyang, @korea, @mju, @ssu, @uos].shuffle.each do |x| %>
-        <% x.each do |y| %>
-			<div class="four columns">
-        <div class="img-wrp">
-          <img class="scaleimg" src="<%= y[2]%>" alt="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac augue at erat hendrerit dictum." />
+        <% teacher_flag = true %>
+        <div class="container">
+          <div class="info-block" style="padding:13px 4px 4px 14px;background:black;">
+            <h4 style="margin-bottom:7px;color:white;"><%= x[0] %></h4>
+          </div>
+
+          <% x[1].each do |y| %>
+            <% teacher = if !y[3].nil? then "&nbsp;선생님".html_safe else "" end %>
+            <% if teacher_flag and(teacher == "") %>
+              <% teacher_flag = false %>
+              </div>
+              <div class="container">
+            <% end %>
+            <div class="four columns">
+              <div class="img-wrp">
+                <img class="scaleimg" src="<%= y[2]%>">
+              </div>
+              <p class="project-title"><%= y[0] %><%= teacher %></p>
+              <p class="project-description" style="margin-bottom:0px;color:black;"><%= y[3] %></p>
+              <p class="project-description"><%= y[1] %></p>
+            </div>	
+          <% end %>
         </div>
-				<p class="project-title"><%= y[0] %></p>
-				<p class="project-description"><%= y[1] %></p>
-			</div>	
-        <% end %>
       <% end %>
-			<!-- End Project -->
+    <!-- End Project -->
 			
 				
 		</div>
@@ -352,13 +394,16 @@
 			</div>
 			
 			<!-- Start Project -->
+      <% @portfolio.each do |x| %>
 			<div class="four columns">
         <div class="img-wrp">
-          <img class="scaleimg" src="images/portfolio/thumbs/image1.jpg" alt="Lorem ipsum." />
+          <img class="scaleimg" src="<%= x[3] %>" alt="Lorem ipsum." />
         </div>
-				<p class="project-title">보트피플</p>
-				<p class="project-description">서울대학교 총학생회 온라인투표</p>
+				<p class="project-title"><%= x[0] %></p>
+				<p class="project-description" style="margin-bottom:0px;color:black"><%= x[1] %></p>
+				<p class="project-description"><%= x[2] %></p>
 			</div>	
+      <% end %>
 			<!-- End Project -->
 		</div> 	
 	</div>
