--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta property="og:title" content="멋쟁이 사자처럼" />
   <meta property="og:site_name" content="내 회사 한번 가져봐야 하지 않겠나?" />
-  <meta property="og:image" content="http://likelion.net//assets/thumb-dc6bbcc6030ba2958bbc9428c8909dbb.jpg" />
+  <meta property="og:image" content="http://likelion.net/images/likelion.png" />
   <meta property="og:url" content="http://likelion.net/" />
   <meta property="og:type" content="website" />
   <meta property="fb:app_id" content="149190165235116" />
