--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta property="og:title" content="멋쟁이 사자처럼" />
   <meta property="og:site_name" content="내 회사 한번 가져봐야 하지 않겠나?" />
-  <meta property="og:image" content="http://likelion.net/images/likelion.png" />
+  <meta property="og:image" content="http://likelion.net/images/likelion-midium.png" />
   <meta property="og:url" content="http://likelion.net/" />
   <meta property="og:type" content="website" />
   <meta property="fb:app_id" content="149190165235116" />
@@ -167,8 +167,8 @@
 			<div class="service one-third column">
 				<h3>Publishing</h3>
 				<div class="icon" style="background-image: url(./images/icons/service-icon.png)"></div>
-				<p class="description">내 손으로 만들어낸 작품이 세상의 빛을 보는 순간입니다. 내 아이디어가 구현되어 여러 사람이 사용하는 것은 가슴 벅찬 일입니다.</p>
-        <p class="description">첫 프로젝트 런칭 이후 여러분은 더욱 많은 프로젝트를 하고 싶은 욕구로 가득 찰 것입니다. </p>
+				<p class="description">내 손으로 만들어낸 작품이 세상의 빛을 보는 순간입니다.</p>
+        <p class="description">'프로그래밍 못하는 사람들이 모여서 이정도 했습니다.'를 하려는게 아니라, 실제 의미있는 IT 서비스를 만들게 될 것입니다.</p>
 			</div>	
 			<!-- End Icons -->	
 		</div>
