--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -65,12 +65,8 @@
 				<img alt="" class="logo" src="images/likelion-logo-small.png" />
 			</div>
       -->
-			
-			<div class="slider-text">
-				<div class="sixteen columns">
-					<div class="line"></div>
     <!--FACEBOOK-->
-    <div id="facebook_division" style="margin-bottom:5px;margin-left:5px;">
+    <div id="facebook_division" style="margin-top:15px;margin-left:10px;">
       <div class="fb-like" data-href="http://likelion.net" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
     </div>
     <div id="fb-root"></div>
@@ -82,6 +78,10 @@
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
     <!--FACEBOOK-->
+			
+			<div class="slider-text">
+				<div class="sixteen columns">
+					<div class="line"></div>
 				</div>
 				
 				<div class="twelve columns">
