--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -233,7 +233,7 @@
               <p>- 서울대학교 웹개발동아리&nbsp;<u>와플스튜디오</u>&nbsp;설립 및 대장, 2007</p>
               <p>- 서울대학교&nbsp;<u>전산원 관리자 권한을 어쩌다 획득</u>&nbsp;후, 교수님께 혼남, 2006</p>
               <p>- <u>egloos 관리자 권한 획득</u>&nbsp;후, egloos 개발자분들께 칭찬받음, 2006</p>
-              <p>- 1, 2학년 학점 1.97 기록, 2004</p>
+              <p>- 1, 2학년 <u>학점 1.97</u> 기록, 2004</p>
 						</div>
 						
 						<div id="tab2-content" class="tab-content">
@@ -369,10 +369,10 @@
 	
 	
 	<!-- Start Third Parallax Background (Clients) -->
-	<div id="parallax3" style="height:800px;">
+	<div id="parallax3">
     <div id="sponsor"></div>
 		<div class="bg3"></div>
-		<div class="pattern" style="height:800px;"></div>
+		<div class="pattern"></div>
 		<div class="container">
 			<div class="vertical-text">
 				<h2 class="black">Sponsored by Google.com</h2>
