간지를 포기할순없다.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -793,6 +793,10 @@ Content
 	          transition: none;
 	}
 
+  #members{
+		background: url(../images/white_paper.jpg) top center;
+  }
+
 	/*Contact------------------------------------------*/
 
 	#contact {
